--- a/environment.yml
+++ b/environment.yml
@@ -1,35 +1,187 @@
 name: diffuser
 channels:
-- defaults
-- conda-forge
+  - defaults
+  - conda-forge
+  - https://repo.anaconda.com/pkgs/main
+  - https://repo.anaconda.com/pkgs/r
 dependencies:
-- python=3.8
-- pip
-- patchelf
-- pip:
-    - -f https://download.pytorch.org/whl/torch_stable.html
-    - numpy
-    - gym==0.18.0
-    - mujoco-py==2.0.2.13
-    - matplotlib==3.3.4
-    - torch==1.9.1+cu111
-    - typed-argument-parser
-    - git+https://github.com/Farama-Foundation/d4rl@f2a05c0d66722499bf8031b094d9af3aea7c372b#egg=d4rl
-    - scikit-image==0.17.2
-    - scikit-video==1.1.11
-    - gitpython
-    - einops
-    - ffmpeg
-    - ffprobe
-    - pillow
-    - tqdm
-    - pandas
-    - wandb
-    - flax >= 0.3.5
-    - jax <= 0.2.21
-    - ray==2.0.0
-    - crcmod # for fast gsutil rsync on large files
-    - google-api-python-client
-    - cryptography
-    - git+https://github.com/JannerM/doodad.git@janner
-    - gdown>=4.6.0
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - bzip2=1.0.8=h4bc722e_7
+  - c-ares=1.34.4=hb9d3cd8_0
+  - ca-certificates=2024.12.31=h06a4308_0
+  - elfutils=0.192=h7f4e02f_1
+  - gettext=0.22.5=he02047a_3
+  - gettext-tools=0.22.5=he02047a_3
+  - glew=2.1.0=h9c3ff4c_2
+  - gnutls=3.8.8=h2d3e045_0
+  - keyutils=1.6.1=h166bdaf_0
+  - krb5=1.21.3=h659f571_0
+  - ld_impl_linux-64=2.40=h12ee557_0
+  - libarchive=3.7.7=h4585015_3
+  - libasprintf=0.22.5=he8f35ee_3
+  - libasprintf-devel=0.22.5=he8f35ee_3
+  - libcurl=8.11.1=h332b0f4_0
+  - libdrm=2.4.124=hb9d3cd8_0
+  - libedit=3.1.20240808=pl5321h7949ede_0
+  - libegl=1.7.0=ha4b6fd6_2
+  - libev=4.33=hd590300_2
+  - libexpat=2.6.4=h5888daf_0
+  - libffi=3.4.4=h6a678d5_1
+  - libgcc=14.2.0=h77fa898_1
+  - libgcc-ng=14.2.0=h69a702a_1
+  - libgettextpo=0.22.5=he02047a_3
+  - libgettextpo-devel=0.22.5=he02047a_3
+  - libgl=1.7.0=ha4b6fd6_2
+  - libglu=9.0.3=h03adeef_0
+  - libglvnd=1.7.0=ha4b6fd6_2
+  - libglx=1.7.0=ha4b6fd6_2
+  - libgomp=14.2.0=h77fa898_1
+  - libiconv=1.17=hd590300_2
+  - libidn2=2.3.7=hd590300_0
+  - libllvm19=19.1.6=ha7bfdaf_0
+  - liblzma=5.6.3=hb9d3cd8_1
+  - libmicrohttpd=1.0.1=hbc5bc17_1
+  - libnghttp2=1.64.0=h161d5f1_0
+  - libnsl=2.0.1=hd590300_0
+  - libpciaccess=0.18=hd590300_0
+  - libsqlite=3.47.2=hee588c1_0
+  - libssh2=1.11.1=hf672d98_0
+  - libstdcxx=14.2.0=hc0a3c3a_1
+  - libstdcxx-ng=14.2.0=h4852527_1
+  - libtasn1=4.19.0=h166bdaf_0
+  - libunistring=0.9.10=h7f98852_0
+  - libuuid=2.38.1=h0b41bf4_0
+  - libxcb=1.17.0=h8a09558_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libxkbcommon=1.7.0=h2c5496b_1
+  - libxml2=2.13.5=h0d44e9d_1
+  - libzlib=1.3.1=hb9d3cd8_2
+  - lz4-c=1.10.0=h5888daf_1
+  - lzo=2.10=hd590300_1001
+  - mesalib=24.3.3=h0b126fc_0
+  - ncurses=6.5=h2d0b736_2
+  - nettle=3.9.1=h7ab15ed_0
+  - openssl=3.4.0=h7b32b05_1
+  - p11-kit=0.24.1=hc5aa10d_0
+  - patchelf=0.17.2=h6a678d5_0
+  - pip=24.2=py38h06a4308_0
+  - pthread-stubs=0.4=hb9d3cd8_1002
+  - python=3.8
+  - readline=8.2=h5eee18b_0
+  - setuptools=75.1.0=py38h06a4308_0
+  - sqlite=3.47.2=h9eae976_0
+  - tk=8.6.13=noxft_h4845f30_101
+  - wayland=1.23.1=h3e06ad9_0
+  - wheel=0.44.0=py38h06a4308_0
+  - xkeyboard-config=2.43=hb9d3cd8_0
+  - xorg-libx11=1.8.10=h4f16b4b_1
+  - xorg-libxau=1.0.12=hb9d3cd8_0
+  - xorg-libxdamage=1.1.6=hb9d3cd8_0
+  - xorg-libxdmcp=1.1.5=hb9d3cd8_0
+  - xorg-libxext=1.3.6=hb9d3cd8_0
+  - xorg-libxfixes=6.0.1=hb9d3cd8_0
+  - xorg-libxinerama=1.1.5=h5888daf_1
+  - xorg-libxrandr=1.5.4=hb9d3cd8_0
+  - xorg-libxrender=0.9.12=hb9d3cd8_0
+  - xorg-libxshmfence=1.3.3=hb9d3cd8_0
+  - xorg-libxxf86vm=1.1.6=hb9d3cd8_0
+  - zlib=1.3.1=hb9d3cd8_2
+  - zstd=1.5.6=ha6fb4c9_0
+  - pip:
+      - absl-py==2.1.0
+      - certifi==2024.12.14
+      - cffi==1.17.1
+      - charset-normalizer==3.4.1
+      - click==8.1.8
+      - cloudpickle==3.1.0
+      - contourpy==1.1.1
+      - cycler==0.12.1
+      - cython==0.29.37
+      - d4rl==1.1
+      - decorator==4.4.2
+      - dm-control==1.0.23
+      - dm-env==1.6
+      - dm-tree==0.1.8
+      - docstring-parser==0.16
+      - einops==0.8.0
+      - etils==1.3.0
+      - farama-notifications==0.0.4
+      - fasteners==0.19
+      - filelock==3.16.1
+      - fonttools==4.55.3
+      - fsspec==2024.12.0
+      - gitdb==4.0.12
+      - gitpython==3.1.44
+      - glfw==2.8.0
+      - gym==0.24.1
+      - gym-notices==0.0.8
+      - gymnasium==1.0.0
+      - h5py==3.11.0
+      - huggingface-hub==0.27.1
+      - idna==3.10
+      - imageio==2.35.1
+      - imageio-ffmpeg==0.5.1
+      - importlib-metadata==8.5.0
+      - importlib-resources==6.4.5
+      - jinja2==3.1.5
+      - kiwisolver==1.4.7
+      - labmaze==1.0.6
+      - lxml==5.3.0
+      - markupsafe==2.1.5
+      - matplotlib==3.7.5
+      - mjrl==1.0.0
+      - moviepy==1.0.3
+      - mpmath==1.3.0
+      - mujoco==3.2.3
+      - mujoco-py==2.1.2.14
+      - mypy-extensions==1.0.0
+      - networkx==3.1
+      - numpy==1.24.4
+      - nvidia-cublas-cu12==12.1.3.1
+      - nvidia-cuda-cupti-cu12==12.1.105
+      - nvidia-cuda-nvrtc-cu12==12.1.105
+      - nvidia-cuda-runtime-cu12==12.1.105
+      - nvidia-cudnn-cu12==9.1.0.70
+      - nvidia-cufft-cu12==11.0.2.54
+      - nvidia-curand-cu12==10.3.2.106
+      - nvidia-cusolver-cu12==11.4.5.107
+      - nvidia-cusparse-cu12==12.1.0.106
+      - nvidia-nccl-cu12==2.20.5
+      - nvidia-nvjitlink-cu12==12.6.85
+      - nvidia-nvtx-cu12==12.1.105
+      - opencv-python==4.11.0.86
+      - packaging==24.2
+      - pandas==2.0.3
+      - pillow==10.4.0
+      - proglog==0.1.10
+      - protobuf==5.29.3
+      - pybullet==3.2.6
+      - pycparser==2.22
+      - pygame==2.6.1
+      - pyopengl==3.1.7
+      - pyparsing==3.1.4
+      - python-dateutil==2.9.0.post0
+      - pytz==2024.2
+      - pyyaml==6.0.2
+      - regex==2024.11.6
+      - requests==2.32.3
+      - safetensors==0.5.2
+      - scikit-video==1.1.11
+      - scipy==1.10.1
+      - sentencepiece==0.2.0
+      - six==1.17.0
+      - smmap==5.0.2
+      - sympy==1.13.3
+      - termcolor==2.4.0
+      - tokenizers==0.20.3
+      - torch==2.4.1
+      - tqdm==4.67.1
+      - transformers==4.46.3
+      - triton==3.0.0
+      - typed-argument-parser==1.10.1
+      - typing-extensions==4.12.2
+      - typing-inspect==0.9.0
+      - tzdata==2025.1
+      - urllib3==2.2.3
+      - zipp==3.20.2
